# KursDurak

./: README.md
DURAK_LATIN/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  build.ps1  generate_test_cards.ps1  test_sfml.cpp
DURAK_LATIN/assets/cards/: README.md  placeholder.txt
DURAK_LATIN/include/: Game.h
DURAK_LATIN/src/: CMakeLists.txt  main.cpp
durak_game/: CMakeLists.txt  DEVELOPMENT.md  LICENSE  README.md  build.ps1  download_sfml.ps1
durak_game/include/: Card.h  Deck.h  Player.h
durak_game/src/: CMakeLists.txt  Card.cpp  Deck.cpp  Game.cpp  Player.cpp
